--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -3,6 +3,8 @@
     DocumentRoot ${APACHE_DOCUMENT_ROOT}
     ServerName localhost
 	<Directory ${APACHE_DOCUMENT_ROOT}>
-		AllowOverride all
+		Options Indexes MultiViews
+        AllowOverride None
+        Require all granted
 	</Directory>
 </VirtualHost>
